@startuml "Overlays"

' WorkStarted
' WorkEnded
' Backgrounded
' Foregrounded

state ShowingNothing
state ShowingBusy
ShowingBusy : WorkStarted / IncrementWorkCount
ShowingBusy : WorkEnded [WorkCount > 1] / DecrementWorkCount

state ShowingPrivacy {
    state NoWork
    state DeferredWork
    DeferredWork : WorkStarted / IncrementWorkCount
    DeferredWork : WorkEnded [WorkCount > 1] / DecrementWorkCount

    [*] --> NoWork
    NoWork --> DeferredWork : WorkStarted /\nIncrementWorkCount
    DeferredWork --> NoWork : WorkEnded /\nDecrementWorkCount
}
state ShowingPrivacyOverBusy {
    state WorkUnderneath
    WorkUnderneath : WorkStarted / IncrementWorkCount
    WorkUnderneath : WorkEnded [WorkCount > 1] / DecrementWorkCount
    state NoLongerBusy

    [*] --> WorkUnderneath
    WorkUnderneath --> NoLongerBusy : WorkEnded /\nDecrementWorkCount
    NoLongerBusy --> WorkUnderneath : WorkStarted /\nIncrementWorkCount
}

[*] --> ShowingNothing

ShowingNothing --> ShowingBusy : WorkStarted /\nIncrementWorkCount\nShowBusyOverlay
ShowingBusy --> ShowingNothing : WorkEnded /\nDecrementWorkCount\nPopOverlay

ShowingNothing --> ShowingPrivacy : Backgrounded /\nAddPrivacyOverlay
ShowingPrivacy --> ShowingNothing : Foregrounded /\nPopOverlay
DeferredWork --> ShowingBusy : Foregrounded /\nPopOverlay\nAddBusyOverlay

ShowingBusy --> ShowingPrivacyOverBusy : Backgrounded /\nAddPrivacyOverlay
ShowingPrivacyOverBusy --> ShowingBusy : Foregrounded /\nPopOverlay

NoLongerBusy --> ShowingNothing : Foregrounded /\nPopOverlay\nPopOverlay

@enduml